--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -9,11 +9,6 @@
         "editor.tabSize": 2
     },
 
-    // HTML
-    "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
-    },
-
     // DATE & TIME
     "dateTime.showAMPM": true,
     "dateTime.showMonth": true,
@@ -22,13 +17,14 @@
     "dateTime.showSeconds": true,
     "dateTime.padDays": true,
 
-    // DOCKER
-    // "docker.host": "localhost:8899",
+    // DEBUG
+    "debug.inlineValues": true,
 
     // DIFF EDITOR
     "diffEditor.ignoreTrimWhitespace": false,
 
     // EDITOR
+    "editor.tabSize": 4,
     "editor.occurrencesHighlight": false,
     "editor.renderIndentGuides": false,
     "editor.detectIndentation": true,
@@ -43,6 +39,17 @@
         100
     ],
     "editor.renderLineHighlight": "gutter",
+    "editor.lineNumbers": "on",
+    "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+    "editor.wordWrap": "off",
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+    },
+    "editor.suggest.preview": true,
+    "editor.suggest.showStatusBar": true,
+    "editor.minimap.showSlider": "always",
+    "editor.autoSurround": "languageDefined",
+    "editor.stickyTabStops": true,
 
     // EXTENSIONS
     "extensions.autoCheckUpdates": true,
@@ -80,46 +87,33 @@
     // GITLENS
     "gitlens.currentLine.scrollable": false,
 
+    // HTML
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+
+    // JUPYTER
+	"jupyter.themeMatplotlibPlots": true,
+    "jupyter.askForKernelRestart": false,
+    "notebook.globalToolbar": false,
+
     // MARKDOWN
     "[markdown]": {
         "editor.wordWrap": "on",
         "editor.quickSuggestions": false,
         "editor.minimap.enabled": true
     },
+    "editor.unfoldOnClickAfterEndOfLine": true,
 
     // PYTHON
     "python.analysis.logLevel": "Information",
-    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": true,
     "[python]": {
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
-        "editor.detectIndentation": true
+        "editor.detectIndentation": true,
+        "editor.defaultFormatter": "ms-python.python",
     },
-    // "python.jediEnabled": true,
-
-    // VIM
-    "vim.searchHighlightColor": "#344a74",
-    "vim.hlsearch": true,
-    "vim.whichwrap": "h,l,<,>,[,]",
-    "vim.debug.loggingLevelForConsole": "debug",
-    "vim.handleKeys": {
-        "<C-d>": true, // if false enables multi cursor selection in Insert mode, then use PageDown instead
-        "<C-u>": true, // if false enables cursor undo action in Insert mode, then use PageDown instead
-        "<C-b>": false // if  false enables explorer toggling, use PageUp instead
-    },
-
-    // VS ICONS
-    "vsicons.dontShowNewVersionMessage": true,
-    "window.titleBarStyle": "custom",
-
-    // WORKBENCH
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.panel.defaultLocation": "right",
-    "workbench.settings.editor": "json",
-    "workbench.tree.indent": 16,
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.activityBar.visible": true,
-    "workbench.colorTheme": "One Dark Pro",
 
     // REMOTE DEVELOPMENT
     "remote.containers.defaultExtensions": [
@@ -138,6 +132,7 @@
         "mutantdino.resourcemonitor",
         "njpwerner.autodocstring",
         "rid9.datetime",
+        "TabNine.tabnine-vscode",
         "vscode-icons-team.vscode-icons",
         "vscodevim.vim",
         "zhuangtongfa.material-theme",
@@ -154,13 +149,46 @@
     "telemetry.enableTelemetry": false,
 
     // TERMINAL
-    "terminal.integrated.shell.linux": "/bin/bash",
-    "terminal.integrated.scrollback": 10000,
-    "terminal.integrated.rendererType": "canvas",
-    "workbench.editorAssociations": [
-        {
-            "viewType": "jupyter.notebook.ipynb",
-            "filenamePattern": "*.ipynb"
+    "terminal.integrated.defaultProfile.linux": "Bash",
+    "terminal.integrated.profiles.linux": {
+        "Bash": {
+            "path": "/bin/bash"
         }
-    ],
+    },
+    "terminal.integrated.scrollback": 10000,
+
+    // VIM
+    "vim.searchHighlightColor": "#344a74",
+    "vim.hlsearch": true,
+    "vim.whichwrap": "h,l,<,>,[,]",
+    "vim.debug.loggingLevelForConsole": "debug",
+    "vim.handleKeys": {
+        "<C-d>": true, // if false enables multi cursor selection in Insert mode, then use PageDown instead
+        "<C-u>": true, // if false enables cursor undo action in Insert mode, then use PageDown instead
+        "<C-b>": false // if  false enables explorer toggling, use PageUp instead
+    },
+
+    // VS ICONS
+    "vsicons.dontShowNewVersionMessage": true,
+
+    // WINDOW
+    "window.titleBarStyle": "custom",
+    "window.menuBarVisibility": "compact",
+    "window.zoomLevel": -1,
+
+    // WORKBENCH
+    "workbench.colorTheme": "One Dark Pro",
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.panel.defaultLocation": "right",
+    "workbench.settings.editor": "json",
+    "workbench.tree.indent": 16,
+    "workbench.iconTheme": "vscode-icons",
+    "workbench.activityBar.visible": true,
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter.notebook.ipynb"
+    },
+
+    // ZEN MODE
+    "zenMode.restore": true,
+    "tabnine.experimentalAutoImports": true
 }
