Update remote extensions list

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -133,10 +133,11 @@
         "ms-vscode.cpptools",
         "mutantdino.resourcemonitor",
         "njpwerner.autodocstring",
+        "pkief.material-icon-theme",
         "rid9.datetime",
+        "timonwong.shellcheck",
         "tamasfe.even-better-toml",
         "trond-snekvik.simple-rst",
-        "pkief.material-icon-theme",
         "vscodevim.vim",
         "zhuangtongfa.material-theme",
     ],
